feat(*) add university field

--- a/src/app/form-gv/form-gv.component.html
+++ b/src/app/form-gv/form-gv.component.html
@@ -152,6 +152,28 @@
                       Desculpe, nossos programas são direcionados para pessoas entre 18 e 30 anos.
                     </div>
                   </div>
+                  <div class="form-group  university">
+                    <div class="input-group select-dropdown">
+                      <div class="input-group-prepend">
+                        <div class="input-group-text">
+                          <i class="fas fa-graduation-cap"></i>Universidade</div>
+                      </div>
+                      <div class="dropdown">
+                        <div class="styled-select">
+                          <p-autoComplete [(ngModel)]="user.university" [suggestions]="universities"
+                            (completeMethod)="searchUnivesity($event)" #universityAutocomplete
+                            (onFocus)="selectInput('university');universityAutocomplete.handleDropdownClick();"
+                            dropdownMode="current" field="name" formControlName="university_id"
+                            emptyMessage="Nenhum resultado" placeholder="Digite aqui onde você estuda"></p-autoComplete>
+                          <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('university')"
+                            *ngIf="user.university"></i>
+                        </div>
+                      </div>
+                    </div>
+                    <div *ngIf="isValidStudy('university_id')" class='error-message'>
+                      Selecione uma universidade.
+                    </div>
+                  </div>
                   <div class="form-group">
                     <div class="input-group">
                       <div class="input-group-prepend desktop">
@@ -172,6 +194,7 @@
                       </div>
                     </div>
                   </div>
+ 
                   <div class="form-group">
                     <div class="input-group">
                       <div class="input-group-prepend desktop">
