--- a/src/app/form-gv/form-gv.component.html
+++ b/src/app/form-gv/form-gv.component.html
@@ -164,7 +164,7 @@
                             (completeMethod)="searchUnivesity($event)" #universityAutocomplete
                             (onFocus)="selectInput('university');universityAutocomplete.handleDropdownClick();"
                             dropdownMode="current" field="name" formControlName="university_id"
-                            emptyMessage="Nenhum resultado" placeholder="Digite aqui onde você estuda"></p-autoComplete>
+                            emptyMessage="Nenhum resultado"></p-autoComplete>
                           <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('university')"
                             *ngIf="user.university"></i>
                         </div>
