fix(*) style inputs

--- a/src/app/form-gt/form-gt.component.scss
+++ b/src/app/form-gt/form-gt.component.scss
@@ -1826,6 +1826,11 @@ label {
     margin: 25px 0
 }
 
+.direction-rtl {
+    direction: rtl;
+    padding-right: 35px;
+}
+
 #modal {
     width: 100%;
     height: 100%;
