--- a/src/app/form-gv/form-gv.component.scss
+++ b/src/app/form-gv/form-gv.component.scss
@@ -1789,8 +1789,9 @@ label {
     top: 15px;
 }
 
-.univesity-input {
+.direction-rtl {
     direction: rtl;
+    padding-right: 35px;
 }
 
 @media (min-width: 1440px) {
