--- a/src/app/form-gt/form-gt.component.html
+++ b/src/app/form-gt/form-gt.component.html
@@ -205,10 +205,10 @@
                           <i class="fas fa-map-marker-alt"></i>AIESEC mais próxima</div>
                       </div>
                       <div class="dropdown">
-                        <div class="styled-select">
+                        <div class="styled-select direction-rtl">
                           <p-autoComplete [(ngModel)]="user.local_committee" [suggestions]="filteredPlaces" (completeMethod)="searchPlaces($event)"
                             #placesAutocomplete (onFocus)="selectInput('local_committee');placesAutocomplete.handleDropdownClick();" dropdownMode="current"
-                            field="name" formControlName="local_committee_id" emptyMessage="Nenhum resultado" placeholder="{{embeddedForm ? '' : 'Esse é o escritório que vai cuidar de você!'}}"></p-autoComplete>
+                            field="name" formControlName="local_committee_id" emptyMessage="Nenhum resultado" placeholder="{{embeddedForm ? '' : 'Esse é o escritório que vai cuidar de você'}}"></p-autoComplete>
                             <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('local_committee')"  *ngIf="user.local_committee"></i>
                         </div>
                       </div>
@@ -225,7 +225,7 @@
                             <i class="fas fa-book-open"></i>Curso</div>
                         </div>
                         <div class="dropdown">
-                          <div class="styled-select">
+                          <div class="styled-select direction-rtl">
                             <p-autoComplete [(ngModel)]="user.college_course" [suggestions]="filteredCourses" (completeMethod)="searchCourses($event)"
                               #coursesAutocomplete (onFocus)="selectInput('college_course');coursesAutocomplete.handleDropdownClick();" dropdownMode="current"
                               field="name" formControlName="college_course_id" emptyMessage="Nenhum resultado" placeholder="Insira seu curso"></p-autoComplete>
@@ -245,7 +245,7 @@
                           <i class="fas fa-book-open"></i>Nível de Inglês</div>
                       </div>
                       <div class="dropdown">
-                        <div class="styled-select">
+                        <div class="styled-select direction-rtl">
                           <p-autoComplete [(ngModel)]="user.english_level" [suggestions]="filteredEnglishLevelOptions" (completeMethod)="searchEnglishLevels($event)"
                             #englishAutocomplete (onFocus)="selectInput('english_level');englishAutocomplete.handleDropdownClick();" dropdownMode="current"
                             field="name" formControlName="english_level" emptyMessage="Nenhum resultado" placeholder="{{embeddedForm ? '' : 'Isso nos ajuda a te direcionar para as vagas mais adequadas'}}"></p-autoComplete>
@@ -265,17 +265,17 @@
                         </div>
                       </div>
                       <div class="dropdown desktop">
-                        <div class="styled-select">
+                        <div class="styled-select direction-rtl">
                           <select [(ngModel)]="user.program_duration" formControlName="program_duration" name="program_duration" >
-                            <option value="0">6 a 8 semanas - Programa para quem está começando a carreira e quer ter uma experiência internacional!</option>
-                            <option value="1">3 a 18 meses - Programa remunerado para quem tem experiência e quer uma oportunidade no mercado internacional!</option>
+                            <option value="0">Duração de 6 a 8 semanas - Programa para quem está começando a carreira e quer ter uma experiência internacional</option>
+                            <option value="1">Duração de 3 a 18 meses - Programa remunerado para quem tem experiência e quer uma oportunidade no mercado internacional</option>
                           </select>
                         </div>
                       </div>
 
                       <i class="fas mobile mobile-icon">A</i>
                       <div class="dropdown mobile">
-                        <div class="styled-select">
+                        <div class="styled-select direction-rtl">
                           <select [(ngModel)]="user.program_duration" formControlName="program_duration" name="program_duration" >
                             <option value="0">Duração de 6 a 8 semanas - Programa para quem está começando a carreira e quer ter uma experiência internacional!</option>
                             <option value="1">Duração de 3 a 18 meses - Programa remunerado para quem tem experiência e quer uma oportunidade no mercado internacional!</option>
@@ -291,7 +291,7 @@
                           <i class="fas fa-book-open"></i>Área de Atuação</div>
                       </div>
                       <div class="dropdown desktop">
-                        <div class="styled-select">
+                        <div class="styled-select direction-rtl">
                           <select [(ngModel)]="user.area" formControlName="area" name="area" dir="rtl">
                             <option *ngFor="let area of areas" value="{{area.value}}">{{area.name}}</option>
                           </select>
@@ -300,7 +300,7 @@
 
                       <i class="fas mobile mobile-icon">A</i>
                       <div class="dropdown mobile">
-                        <div class="styled-select">
+                        <div class="styled-select direction-rtl">
                           <select [(ngModel)]="user.area" formControlName="area" name="area">
                             <option *ngFor="let area of areas" value="{{area.value}}">{{area.name}}</option>
                           </select>
@@ -316,7 +316,7 @@
                         </div>
                       </div>
                       <div class="dropdown desktop">
-                        <div class="styled-select">
+                        <div class="styled-select direction-rtl">
                           <select [(ngModel)]="user.work_experience_id" formControlName="work_experience_id" name="work_experience_id" dir="rtl">
                             <option *ngFor="let item of educationalExperienceItems" value="{{item.id}}">{{item.name}}</option>
                           </select>
@@ -325,7 +325,7 @@
 
                       <i class="fas mobile mobile-icon">A</i>
                       <div class="dropdown mobile">
-                        <div class="styled-select">
+                        <div class="styled-select direction-rtl">
                           <select [(ngModel)]="user.work_experience_id" formControlName="work_experience_id" name="work_experience_id" dir="rtl">
                             <option *ngFor="let item of educationalExperienceItems" value="{{item.id}}">{{item.name}}</option>
                           </select>
@@ -345,7 +345,7 @@
                       </div>
 
                       <div class="dropdown" *ngIf="embeddedForm">
-                        <div class="styled-select select-tag">
+                        <div class="styled-select direction-rtl select-tag">
                           <select (change)='addOrRemove($event.target.value)'>
                             <option value=""></option>
                             <option *ngFor="let experience of experienceItems" value="{{experience.value}}">{{experience.name}}</option>
