--- a/src/app/form-gp/form-gp.component.html
+++ b/src/app/form-gp/form-gp.component.html
@@ -200,10 +200,10 @@
                           <i class="fas fa-map-marker-alt"></i>AIESEC mais próxima</div>
                       </div>
                       <div class="dropdown">
-                        <div class="styled-select">
+                        <div class="styled-select direction-rtl">
                           <p-autoComplete [(ngModel)]="user.local_committee" [suggestions]="filteredPlaces" (completeMethod)="searchPlaces($event)"
                             #placesAutocomplete (onFocus)="selectInput('local_committee');placesAutocomplete.handleDropdownClick();" dropdownMode="current"
-                            field="name" formControlName="local_committee_id" emptyMessage="Nenhum resultado" placeholder="{{embeddedForm ? '' : 'Esse é o escritório que vai cuidar de você!'}}"></p-autoComplete>
+                            field="name" formControlName="local_committee_id" emptyMessage="Nenhum resultado" placeholder="{{embeddedForm ? '' : 'Esse é o escritório que vai cuidar de você'}}"></p-autoComplete>
                             <i class="fas fa-times autocomplete-clear-btn" (click)="clearField('local_committee')"  *ngIf="user.local_committee"></i>
                         </div>
                       </div>
@@ -220,7 +220,7 @@
                             <i class="fas fa-book-open"></i>Curso</div>
                         </div>
                         <div class="dropdown">
-                          <div class="styled-select">
+                          <div class="styled-select direction-rtl">
                             <p-autoComplete [(ngModel)]="user.college_course" [suggestions]="filteredCourses" (completeMethod)="searchCourses($event)"
                               #coursesAutocomplete (onFocus)="selectInput('college_course');coursesAutocomplete.handleDropdownClick();" dropdownMode="current"
                               field="name" formControlName="college_course_id" emptyMessage="Nenhum resultado" placeholder="Insira seu curso"></p-autoComplete>
@@ -240,7 +240,7 @@
                           <i class="fas fa-book-open"></i>Nível de Inglês</div>
                       </div>
                       <div class="dropdown">
-                        <div class="styled-select">
+                        <div class="styled-select direction-rtl">
                           <p-autoComplete [(ngModel)]="user.english_level" [suggestions]="filteredEnglishLevelOptions" (completeMethod)="searchEnglishLevels($event)"
                             #englishAutocomplete (onFocus)="selectInput('english_level');englishAutocomplete.handleDropdownClick();" dropdownMode="current"
                             field="name" formControlName="english_level" emptyMessage="Nenhum resultado" placeholder="{{embeddedForm ? '' : 'Isso nos ajuda a te direcionar para as vagas mais adequadas'}}"></p-autoComplete>
@@ -260,17 +260,17 @@
                         </div>
                       </div>
                       <div class="dropdown desktop">
-                        <div class="styled-select">
+                        <div class="styled-select" style="padding-right: 15px;">
                           <select [(ngModel)]="user.program_duration" formControlName="program_duration" name="program_duration" >
-                            <option value="0">6 a 8 semanas - Programa para quem está começando a carreira e quer ter uma experiência internacional!</option>
-                            <option value="1">3 a 18 meses - Programa remunerado para quem tem experiência e quer uma oportunidade no mercado internacional!</option>
+                            <option value="0">Duração de 6 a 8 semanas - Programa para quem está começando a carreira e quer ter uma experiência internacional</option>
+                            <option value="1">Duração de 3 a 18 meses - Programa remunerado para quem tem experiência e quer uma oportunidade no mercado internacional</option>
                           </select>
                         </div>
                       </div>
 
                       <i class="fas mobile mobile-icon">A</i>
                       <div class="dropdown mobile">
-                        <div class="styled-select">
+                        <div class="styled-select" style="padding-right: 15px;">
                           <select [(ngModel)]="user.program_duration" formControlName="program_duration" name="program_duration" >
                             <option value="0">Duração de 6 a 8 semanas - Programa para quem está começando a carreira e quer ter uma experiência internacional!</option>
                             <option value="1">Duração de 3 a 18 meses - Programa remunerado para quem tem experiência e quer uma oportunidade no mercado internacional!</option>
@@ -287,7 +287,7 @@
                         </div>
                       </div>
                       <div class="dropdown desktop">
-                        <div class="styled-select">
+                        <div class="styled-select" style="padding-right: 15px;">
                           <select [(ngModel)]="user.work_experience_id" formControlName="work_experience_id" name="work_experience_id" dir="rtl">
                             <option *ngFor="let item of educationalExperienceItems" value="{{item.id}}">{{item.name}}</option>
                           </select>
@@ -296,7 +296,7 @@
 
                       <i class="fas mobile mobile-icon">A</i>
                       <div class="dropdown mobile">
-                        <div class="styled-select">
+                        <div class="styled-select" style="padding-right: 15px;">
                           <select [(ngModel)]="user.work_experience_id" formControlName="work_experience_id" name="work_experience_id" dir="rtl">
                             <option *ngFor="let item of educationalExperienceItems" value="{{item.id}}">{{item.name}}</option>
                           </select>
