wip(app.component.ts form-host-thank-you.component.html)add id fb

--- a/src/app/form-host/form-host-thank-you/form-host-thank-you.component.html
+++ b/src/app/form-host/form-host-thank-you/form-host-thank-you.component.html
@@ -3,6 +3,7 @@
 	<!-- Facebook Pixel Code -->
 	<script>
 		fbq('init', '635983890160770');
+		fbq('init', '769938306920240');
 		fbq('track', 'PageView');
 	</script>
 	<noscript>
